@@ -1,42 +1,0 @@
-# Copyright 1999-2015 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/ntdb/ntdb-1.0.ebuild,v 1.5 2015/01/03 13:14:16 mgorny Exp $
-
-EAPI=5
-
-PYTHON_COMPAT=( python{2_6,2_7} )
-PYTHON_REQ_USE="threads(+)"
-
-inherit waf-utils python-single-r1
-
-DESCRIPTION="A not-so trivial keyword/data database system"
-HOMEPAGE="http://tdb.samba.org/"
-SRC_URI="http://samba.org/ftp/tdb/${P}.tar.gz"
-
-LICENSE="GPL-3"
-SLOT="0"
-KEYWORDS="~amd64 ~hppa ~x86"
-IUSE="python"
-
-REQUIRED_USE="python? ( ${PYTHON_REQUIRED_USE} )"
-
-RDEPEND="python? ( ${PYTHON_DEPS} )"
-DEPEND="!!<net-fs/samba-4.1.7
-	${RDEPEND}
-	${PYTHON_DEPS}
-	app-text/docbook-xml-dtd:4.2"
-
-WAF_BINARY="${S}/buildtools/bin/waf"
-
-src_configure() {
-	local extra_opts=""
-	use python || extra_opts+=" --disable-python"
-	waf-utils_src_configure \
-	${extra_opts}
-}
-
-src_test() {
-	# the default src_test runs 'make test' and 'make check', letting
-	# the tests fail occasionally (reason: unknown)
-	emake check
-}
